src/parser/snapshots/molt__parser__tests__ident_err.snap
---
source: src/parser/tests.rs
expression: "crate :: parser :: tests :: parse_molt_err :: < Ident > (\"async\")"
snapshot_kind: text
---
error: Wrong token.
  ┌─ CLI input:1:6
  │
1 │ async
  │      ^ Wrong token.
